<resources>
    <string name="app_name">MontraExpenseTracker</string>
    <string name="splash_text">montra</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="onboarding_screen_heading_1">Gain total control\n  of your money</string>
    <string name="onboarding_screen_heading_2">Know where your money goes</string>
    <string name="onboarding_screen_heading_3">Planning ahead</string>
    <string name="onboarding_screen_subtitle_1">Become your own money manager\n \t\t\t\tand make every cent count</string>
    <string name="onboarding_screen_subtitle_2">Track your transaction easily,\n with categories and financial report </string>
    <string name="onboarding_screen_subtitle_3">Setup your budget for each category\n\t\t\tso you in control</string>
    <string name="text_toolbar_signup">Sign Up</string>
    <string name="btn_txt_sign_up">Sign up</string>
    <string name="btn_txt_login">Login</string>
    <string name="textfield_name">Name</string>
    <string name="hint_text_password">Password\n</string>
    <string name="hint_text_email">Email</string>
    <string name="checkbox_text">By signing up, you agree to the Terms of\nService and Privacy Policy</string>
    <string name="or_with">Or with</string>
    <string name="button_google_text">Sign Up with Google</string>
    <string name="login_text">Login</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="text_toolbar_login">Login\n</string>
    <string name="button_text_login">Login</string>
    <string name="forgot_password_text">Forgot Password?</string>
    <string name="signup_text_login">Sign Up</string>
    <string name="don_t_have_an_account_yet">Don’t have an account yet?</string>
    <string name="text_toolbar_forgot_password">Forgot Password</string>
    <string name="don_t_worry_enter_your_email_and_we_ll_send_you_a_link_to_reset_your_password">Don’t worry.\nEnter your email and we’ll send you a link to reset your password.</string>
    <string name="button_text_continue">Continue</string>
    <string name="your_email_is_on_the_way">Your email is on the way</string>
    <string name="check_your_email_test_test_com_and_follow_the_instructions_to_reset_your_password">Check your email test@test.com and follow the instructions to reset your password</string>
    <string name="back_to_login">Back to Login</string>
    <string name="enter_your_verification_code">Enter your\nVerification Code</string>
    <string name="we_send_verification_code_to_your_email_brajaoma_gmail_com_you_can_check_your_inbox">We send verification code to your email brajaoma*****@gmail.com. You can check your inbox.</string>
    <string name="verify">Verify</string>
    <string name="_04_59">04:59</string>



    <string name="client_id">666434514291-f5bc34hej5q7d7udqsenl194v9blis2a.apps.googleusercontent.com</string>
</resources>