<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.forgotpassword.ForgotPasswordFragment">


    <include
        android:id="@+id/component_toolbar"
        layout="@layout/component_toolbar" />

    <TextView
        android:id="@+id/textView"
        style="@style/splash_text_style"
        android:layout_width="match_parent"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_100sdp"
        android:layout_marginEnd="@dimen/_13sdp"
        android:fontFamily="@font/inter_semibold"
        android:gravity="start"
        android:text="@string/don_t_worry_enter_your_email_and_we_ll_send_you_a_link_to_reset_your_password"
        android:textColor="@color/black"
        android:textSize="@dimen/_20ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/textFieldEmail"
        style="@style/text_edit"
        android:layout_marginTop="@dimen/_22sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:fontFamily="@font/inter"
        android:hint="@string/hint_text_email"
        android:textColorHint="@color/Light_20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_Continue"
        style="@style/button_style"
        android:layout_width="match_parent"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:fontFamily="@font/inter_semibold"
        android:includeFontPadding="false"
        android:text="@string/button_text_continue"
        android:textSize="@dimen/_16ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textFieldEmail" />

</androidx.constraintlayout.widget.ConstraintLayout>