<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.forgotpassword.ForgotPasswordSentFragment">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/_65sdp"
        android:src="@drawable/ilustrationemailsent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.595"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />


    <TextView
        android:id="@+id/textViewEmailOnWay"
        style="@style/splash_text_style"
        android:layout_width="match_parent"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_50sdp"
        android:fontFamily="@font/inter_semibold"
        android:gravity="center"
        android:text="@string/your_email_is_on_the_way"
        android:textColor="@color/black"
        android:textSize="@dimen/_20ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />


    <TextView
        android:id="@+id/textViewCheckEmail"
        style="@style/splash_text_style"
        android:layout_width="match_parent"
        android:layout_marginStart="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_22sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:fontFamily="@font/inter_medium"
        android:gravity="center"
        android:text="@string/check_your_email_test_test_com_and_follow_the_instructions_to_reset_your_password"
        android:textColor="@color/Dark25"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewEmailOnWay" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_backToLogin"
        style="@style/button_style"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/_80sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:fontFamily="@font/inter_semibold"
        android:includeFontPadding="false"
        android:text="@string/back_to_login"
        android:textSize="@dimen/_16ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewCheckEmail" />

</androidx.constraintlayout.widget.ConstraintLayout>